--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-php-vitexsoftware-ease-bootstrap5-widgets (1.3) UNRELEASED; urgency=medium
+php-vitexsoftware-ease-bootstrap5-widgets (1.4.0) UNRELEASED; urgency=medium
+
+  * Strict Types
+
+ -- vitex <info@vitexsoftware.cz>  Wed, 09 Oct 2024 19:16:35 +0200
+
+php-vitexsoftware-ease-bootstrap5-widgets (1.3) unstable; urgency=medium
 
   [ Vítězslav Dvořák ]
   * Non-maintainer upload.
@@ -11,4 +17,4 @@ php-vitexsoftware-ease-bootstrap5-widgets (1.3) UNRELEASED; urgency=medium
   * Update composer.json
   * Localization update
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Thu, 11 Mar 2021 16:14:52 +0100
+ -- vitex <info@vitexsoftware.cz>  Wed, 09 Oct 2024 19:15:50 +0200
