--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-php-vitexsoftware-ease-bootstrap5-widgets (1.4.0) UNRELEASED; urgency=medium
+php-vitexsoftware-ease-bootstrap5-widgets (1.4.1) UNRELEASED; urgency=medium
+
+  * minimal version is php81
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 08 Apr 2025 19:41:13 +0200
+
+php-vitexsoftware-ease-bootstrap5-widgets (1.4.0) unstable; urgency=medium
 
   * Strict Types
 
- -- vitex <info@vitexsoftware.cz>  Wed, 09 Oct 2024 19:16:35 +0200
+ -- vitex <info@vitexsoftware.cz>  Tue, 08 Apr 2025 19:40:57 +0200
 
 php-vitexsoftware-ease-bootstrap5-widgets (1.3) unstable; urgency=medium
 
